tests/NormalTests/paczka1/small_fuzzy/56366718.err
Error in line 10: A570 A570 83,5
Error in line 3: rJUJdf A398 65,8
